--- a/desafios/des002/style.css
+++ b/desafios/des002/style.css
@@ -1,12 +1,19 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root{
+    --fonte1: Georgia, 'Times New Roman', Times, serif;
+    --fonte2: 'Sriracha', cursive;
+}
+
 *{
     margin: 0px;
     padding: 0px;
     
 }
 html, body{
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: var(--fonte1);
     background-color: darkgray;
     min-height: 100vh;
     
@@ -19,7 +26,7 @@ header{
 }
 header > h1{
     padding-top: 50px;
-
+    font-size: 8vw;
 }
 header a{
     text-decoration: none;
@@ -37,9 +44,13 @@ section{
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte2);
+    font-size: 3.5vh;
+}
+section p{
+    font-size: 5vh;
 }
 section.normal{
-    
     color: black;
 }
 section#fotoamarela{
@@ -48,20 +59,13 @@ section#fotoamarela{
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    
     border: 1px solid black;
-    
-    
 }
 section#fotoamarela p{
-    
     color: white;
     background-color: rgba(0, 0, 0, 0.342);
-    width: 400px;
-    height: 300px;
-    padding: 20px;
-    
-    
+    display: inline-block;
+    padding: 5px;
 }
 section#fotolivro{
     background-image: url(imagens/background002.jpg);
@@ -69,17 +73,11 @@ section#fotolivro{
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    
     border: 1px solid black;
-    
-    
 }
 section#fotolivro p{
-    
     color: white;
     background-color: rgba(0, 0, 0, 0.459);
-    width: 400px;
-    height: 300px;
-    padding: 20px;
-    
+    display: inline-block;
+    padding: 5px; 
 }
